feat(calculator): add calculator with decimal number